# software-evaluation

./: .dockerignore  Cargo.toml  Dockerfile  INSTRUMENTS.md  PROVENANCE.md  README.md  REPORT.md  TAXONOMY.md  compose.yaml
docs/: canonicality.md
evaluations/exopriors-change-profile-20260712/: main.json  manifest.json  nucleus.json  report.md
evaluations/exopriors-dependency-propagation-20260711/: deps-nucleus.json  manifest.json  profile.json  report.md
evaluations/exopriors-main-vs-nucleus-20260710/: PROCEDURE.md  api-nucleus.json  audit.json  branch-relation.json  deps-nucleus.json  duplicates-nucleus.json  files-main.json  files-nucleus.json  findings.md  functions-main.json  functions-nucleus.json  manifest.json  metrics-compare.json  records.jsonl  repo-compare.json  report.md  tests-main.json  tests-nucleus.json
evaluations/forward-cycle1-20260709/: records.jsonl  report.md
evaluations/forward-cycle1-20260709/judges/: PROCEDURE.md  codex-artifact-judge.md  judge-process-claude.md  self-read.md
examples/: audit-plan.json
extensions/github-software-evaluation/: README.md  background.js  config.js  content.js  manifest.json  panel.js  repo-identity.js
extensions/github-software-evaluation/tests/: background.test.js  content-state.test.js  identity.test.js  manifest.test.js  panel-model.test.js
extensions/github-software-evaluation/tests/fixtures/: panel-contract.html
src/: analysis_output.rs  api_surface.rs  audit.rs  benchmark.rs  change_profile.rs  change_profile_output.rs  compare.rs  deps.rs  duplicates.rs  info.rs  kernel.rs  lib.rs  main.rs  metrics.rs  repo.rs  source.rs  tests_analysis.rs
src/service/: app.rs  archive.rs  dto.rs  github.rs  identity.rs  mod.rs  worker.rs
tests/: api_surface.rs  audit.rs  benchmark.rs  change_profile_cli.rs  deps.rs  duplicates.rs  info.rs  kernel_compare.rs  metrics_cli.rs  metrics_compare.rs  repo.rs  service_github_contract.rs  service_identity_archive.rs  service_router_contract.rs  service_worker_contract.rs  service_worker_timeout.rs  source.rs  tests_analysis.rs
tests/fixtures/service_worker_complete/: Cargo.toml
tests/fixtures/service_worker_complete/src/: alpha.rs  beta.rs  lib.rs
tests/fixtures/service_worker_partial/: Cargo.toml
tests/fixtures/service_worker_partial/src/: lib.rs
