[package]
name = "software-evaluation"
version = "0.1.0"
edition = "2024"
description = "Evidence-first software evaluation and audit planning"
license = "MIT"

[[bin]]
name = "seval"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
tempfile = "3.20"
