[package]
name = "software-evaluation"
version = "0.1.0"
edition = "2024"
description = "Evidence-first software evaluation and audit planning"
license = "MIT"

[[bin]]
name = "seval"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
big-code-analysis = { version = "=2.0.0", default-features = false, features = ["rust", "python", "javascript", "typescript", "go"] }
ignore = "0.4"
rayon = "1.11"
regex = "1.11"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
tempfile = "3.20"
