[package]
name = "software-evaluation"
version = "0.1.0"
edition = "2024"
description = "Evidence-first software evaluation and audit planning"
license = "MIT"

[[bin]]
name = "seval"
path = "src/main.rs"

[[bin]]
name = "sevald"
path = "src/bin/sevald.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
big-code-analysis = { version = "=2.0.0", default-features = false, features = ["rust", "python", "javascript", "typescript", "go"] }
ignore = "0.4"
rayon = "1.11"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
bytes = "1"
futures-util = "0.3"
http = "1"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tempfile = "3.20"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "process", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
regex = "1.11"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
tempfile = "3.20"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
